round 2 of shorterning the paper to biometrics limit

--- a/report/pers_schedule/biometrics_submission/bibliography.bib
+++ b/report/pers_schedule/biometrics_submission/bibliography.bib
@@ -9,16 +9,15 @@ year={2015},
 publisher={Elsevier}
 }
 
-
 @article{Gleason_interobs_var,
-  title={Accuracy of biopsy Gleason scores from a large uropathology laboratory: use of a diagnostic protocol to minimize observer variability},
-  author={Carlson, Grant D. and Calvanese, Christina B. and Kahane, Hillel and Epstein, Jonathan I.},
-  journal={Urology},
-  volume={51},
-  number={4},
-  pages={525--529},
-  year={1998},
-  publisher={Elsevier}
+title={Accuracy of biopsy Gleason scores from a large uropathology laboratory: use of a diagnostic protocol to minimize observer variability},
+author={Carlson, Grant D. and Calvanese, Christina B. and Kahane, Hillel and Epstein, Jonathan I.},
+journal={Urology},
+volume={51},
+number={4},
+pages={525--529},
+year={1998},
+publisher={Elsevier}
 }
 
 @article{rizopoulos2011dynamic,
@@ -92,14 +91,14 @@ publisher={Foundation for Open Access Statistics}
 }
 
 @article{sokolova2009systematic,
-  title={A systematic analysis of performance measures for classification tasks},
-  author={Sokolova, Marina and Lapalme, Guy},
-  journal={Information Processing \& Management},
-  volume={45},
-  number={4},
-  pages={427--437},
-  year={2009},
-  publisher={Elsevier}
+title={A systematic analysis of performance measures for classification tasks},
+author={Sokolova, Marina and Lapalme, Guy},
+journal={Information Processing \& Management},
+volume={45},
+number={4},
+pages={427--437},
+year={2009},
+publisher={Elsevier}
 }
 
 @article{rizopoulos2014bma,
@@ -218,6 +217,22 @@ author={Rizopoulos, Dimitris},
 year={2012},
 publisher={CRC Press},
 isbn = {9781439872864}
+}
+
+@book{bergerDecisionTheory,
+title={Statistical Decision Theory and Bayesian Analysis},
+author={Berger, James O},
+year={1985},
+isbn = {9781475742862},
+publisher={Springer Science \& Business Media}
+}
+
+@book{robertBayesianChoice,
+title={The Bayesian choice: from decision-theoretic foundations to computational implementation},
+author={Robert, Christian},
+year={2007},
+isbn = {9780387715995},
+publisher={Springer Science \& Business Media}
 }
 
 @article{welty2015extended,
