--- a/report/pers_schedule/biometrics_submission/mainmatter/acknowledgement.tex
+++ b/report/pers_schedule/biometrics_submission/mainmatter/acknowledgement.tex
@@ -1,4 +1,4 @@
-% !TEX root =  ../main.tex
+% !TEX root =  ../pers_schedules.tex
 
 \section*{Acknowledgements}
 The authors thank the Erasmus MC Cancer Computational Biology Center for giving access to their IT-infrastructure and software that was used for the computations and data analysis in this study.\vspace*{-8pt}
