--- a/report/pers_schedule/biometrics_submission/mainmatter/choosing_schedule.tex
+++ b/report/pers_schedule/biometrics_submission/mainmatter/choosing_schedule.tex
@@ -1,8 +1,8 @@
-% !TEX root =  ../main.tex
+% !TEX root =  ../pers_schedules.tex
 
 \section{Choosing a schedule}
 \label{sec : choosing_schedule}
-Given a particular schedule $S$ of biopsies, our next goal is to evaluate the efficacy of this schedule and to compare it with other schedules. To this end, we first present the criteria for evaluation of efficacy of biopsy schedules and then discuss the choice of a scheduling method.
+Given a particular schedule $S$ of biopsies, our next goal is to evaluate the efficacy of this schedule and to compare it with other schedules. To this end, we first present the criteria for evaluation of efficacy of biopsy schedules and then discuss the choice of the optimal schedule.
 
 \subsection{Evaluation of efficacy of schedules}
 The first criteria in the evaluation of efficacy of a schedule $S$ is the number of repeat biopsies $N^{bS}$ it conducts before GR is detected for a patient. More specifically, our interest lies in the marginal distribution $p(N^{bS})$ of number of biopsies for the entire population of patients. Various measures of efficacy can be extracted from this distribution, such as the mean $E[N^{bS}]$, or the variance $\mbox{var}[N^{bS}]$. Given the medical and financial burden associated with biopsies, a small mean and small variance is desired. Quantiles of $p(N^{bS})$ may also be of interest. For e.g. a schedule which takes less than 2 biopsies in 95\% cases may be preferred.
