--- a/report/pers_schedule/biometrics_submission/mainmatter/introduction.tex
+++ b/report/pers_schedule/biometrics_submission/mainmatter/introduction.tex
@@ -1,19 +1,18 @@
-% !TEX root =  ../main.tex 
-
+% !TEX root =  ../pers_schedules.tex 
 \section{Introduction}
 \label{sec : introduction}
-In this decade prostate cancer is the second most frequently diagnosed cancer (14\% of all cancers) in males worldwide, and the most frequent (19\% of all cancers in USA alone) in economically developed countries \citep{GlobalCancerStats2012,USACancerStats2017}. With increase in life expectancy and increase in number of screening programs, an increase in diagnosis of low grade prostate cancers has been observed \citep{potoskyPSAcancer}. A major issue of screening programs that also has been established in other types of cancers (e.g. breast cancer) is over-diagnosis. To avoid overtreatment, patients diagnosed with low grade prostate cancer are often motivated to join active surveillance (AS) programs. The goal of AS is to routinely check the progression of prostate cancer and avoid serious treatments such as surgery or chemotherapy as long as they are not needed.
+In this decade prostate cancer is the second most frequently diagnosed cancer (14\% of all cancers) in males worldwide \citep{GlobalCancerStats2012}, and the most frequent (19\% of all cancers in USA alone) in economically developed countries \citep*{USACancerStats2017}. The increase in diagnosis of low grade prostate cancers has been attributed to increase in life expectancy and increase in number of screening programs \citep{potoskyPSAcancer}. A major issue of screening programs that also has been established in other types of cancers (e.g. breast cancer) is over-diagnosis. To avoid overtreatment, patients diagnosed with low grade prostate cancer are often motivated to join active surveillance (AS) programs. The goal of AS is to routinely examine the progression of prostate cancer and avoid serious treatments such as surgery or chemotherapy as long as they are not needed.
 
-Currently the largest AS program worldwide is Prostate Cancer Research International Active Surveillance (PRIAS) \citep{bokhorst2015compliance}. Patients enrolled in PRIAS are closely monitored using serum prostate-specific antigen (PSA) levels, digital rectal examination (DRE) and repeat prostate biopsies. Biopsies are evaluated using the Gleason grading system. Gleason scores range between 2 and 10, where a score 10 corresponds to a very serious state of prostate cancer. Patients who join PRIAS have a Gleason score of 6 or less, DRE score of cT2c or less and a PSA of 10 ng/mL or less at the time of induction. Although a PSA doubling time, also called PSA-DT (measured as the inverse of the slope of regression line through the base 2 logarithm of PSA values) of less than 3 years, DRE of cT3 or more, and a Gleason score more than 6 are indicators of prostate cancer progression, only DRE and Gleason scores are considered to be conclusive in this regard \citep{bokhorst2016decade}. If either the DRE or the Gleason score are found to be higher than the aforementioned thresholds, then the patient is removed from AS for further curative treatment. When the Gleason score becomes greater than 6, it is also known as Gleason reclassification (referred to as GR hereafter).
+Currently the largest AS program worldwide is Prostate Cancer Research International Active Surveillance (PRIAS) \citep{bokhorst2015compliance}. Patients enrolled in PRIAS are closely monitored using serum prostate-specific antigen (PSA) levels, digital rectal examination (DRE) and repeat prostate biopsies. Results from biopsies are graded on a scale called Gleason, which takes values between 2 and 10, with 10 corresponding to a serious state of the disease. At the time of induction in PRIAS, patients must have a Gleason score of 6 or less, DRE score of cT2c or less and a PSA of 10 ng/mL or less. In PRIAS a PSA doubling time(PSA-DT), measured as the inverse of the slope of regression line through the base 2 logarithm of PSA values, of less than 3 years indicates of prostate cancer progression. However until either DRE or Gleason are observed to be higher than the aforementioned thresholds, patients are not removed from AS for curative treatment \citep{bokhorst2016decade}. When the Gleason score becomes greater than 6, it is also known as Gleason reclassification (referred to as GR hereafter).
 
-Gleason scores are reliable, however the associated biopsies are difficult to conduct, cause pain and have serious side effects such as hematuria and sepsis for prostate cancer patients \citep{loeb2013systematic}. Due to these reasons PRIAS as well as the majority of the AS programs worldwide strongly adhere to the rule of not having more than 1 biopsy per year. Performing a biopsy every year (we refer to it as annual schedule hereafter) has the advantage that it is possible to detect GR within 1 year of its occurrence. The drawbacks of this schedule though, are not only medical but also financial. \cite{keegan2012active} have shown that if a biopsy is performed every year then the costs of AS per head, at 10 years of follow-up exceed the costs of treatment (brachytherapy or prostatectomy) at 6 and 8 years of follow-up, respectively. They also found that performing biopsy every other year led to 99\% increase in savings (AS vs. primary treatment) per head over a period of 10 years compared to annual schedule. Despite this, several AS programs employ the annual schedule \citep{tosoian2011active,welty2015extended}. For patients enrolled in PRIAS the schedule is comparatively less rigorous. In PRIAS schedule one biopsy is performed at the time of induction, and the rest at year 1, 4, 7, 10 and every 5 years thereafter. An exception is made, if at any time a patient has PSA-DT less than 10 years, wherein annual schedule for biopsy is prescribed.
+Biopsies are reliable but they are also difficult to conduct, cause pain and have serious side effects such as hematuria and sepsis \citep{loeb2013systematic}. Due to these reasons majority of the AS programs worldwide strongly adhere to not having more than 1 biopsy per year. Performing a biopsy annually (we refer to it as annual schedule hereafter) has the advantage that GR can be detected within 1 year of its occurrence. The drawbacks of annual schedule although, are not only medical but also financial. \citet{keegan2012active} have shown that annual schedules can cost more than the treatment (brachytherapy or prostatectomy) to AS programs, and if biopsies were to be conducted every other year, then up to 28\% increase in savings from AS over treatment could be achieved per head. Despite this, several AS programs employ the annual schedule \citep{tosoian2011active,welty2015extended}.
 
-PRIAS schedule is less rigorous than annual schedule, yet it has a high non-compliance rate for repeat biopsies. \cite{bokhorst2015compliance} reported that the percentage of men receiving repeat biopsies decreased from 81\% at year 1 to 60\% in year 4, 53\% in year 7 and 33\% in year 10 of follow up. Non-compliance of biopsy schedule reduces the effectiveness of AS programs, as progression is detected late. When compliance is high, patients whose cancer progress slowly often end up having biopsies when they are not needed. For a patient with faster progressing cancer, crude measures such as PSA-DT are employed to decide timing of biopsies. The fact that existing schedules require improvement is also evident in some of the reasons given by patients for non-compliance: \textquoteleft patient does not want biopsy\textquoteright, \textquoteleft PSA stable\textquoteright, \textquoteleft complications on last biopsy\textquoteright and \textquoteleft no signs of disease progression on previous biopsy\textquoteright.
+The PRIAS schedule is less rigorous than annual schedule and yet it has a high non-compliance rate for repeat biopsies \citet{bokhorst2015compliance}. Such non-compliance reduces the effectiveness of AS programs because progression is detected late. The PRIAS schedule and compliance rates are, one biopsy each at year 1 (81\%), year 4 (60\%), year 7 (53\%) and year 10 (33\%). After year 10 biopsies are conducted every 5 years. An exception is made, if at any time a patient has PSA-DT less than 10 years, wherein annual schedule for biopsy is prescribed. When fixed schedules are prescribed to  patients whose cancer progresses slowly, they often end up having unnecessary biopsies. For patients with rapidly progressing cancer, crude measures such as PSA-DT are employed to decide timing of biopsies. The fact that existing schedules require improvement is also evident in some of the reasons given by patients for non-compliance: \textquoteleft patient does not want biopsy\textquoteright, \textquoteleft PSA stable\textquoteright, \textquoteleft complications on last biopsy\textquoteright and \textquoteleft no signs of disease progression on previous biopsy\textquoteright.
 
-This paper is motivated by the need to reduce the burden of biopsies and most optimally find the onset of Gleason reclassification. To this end, we intend to create schedules for biopsies which improve upon the existing PRIAS and annual schedule. For this purpose, one approach which stands out in particular in literature is personalized scheduling. That is, a different schedule for every patient and/or scenario. For e.g. Cost optimized personalized schedules based on Markov models have been proposed by \cite{bebu2017OptimalScreening}. \cite{oMahonyOptimaInterval} have proposed cost optimized personalized equi-spaced screening intervals, using Microsimulation Screening Analysis (MISCAN) models. \cite{parmigiani1998designing} have used information theory to come up with schedules for detecting time to event in the smallest possible time interval. Most of these methods however create an entire schedule in advance. In contrast \cite{drizopoulosPersScreening} have proposed dynamic personalized schedules for longitudinal biomarkers using the framework of joint models for time to event and longitudinal data\citep{tsiatis2004joint,rizopoulos2012joint}.
+This paper is motivated by the need to reduce the burden of biopsies and most optimally find the onset of GR (schedule for measurement of DRE is not of interest since it is a non invasive procedure and has no serious medical implications). To this end, we intend to create schedules for biopsies which improve upon the PRIAS and annual schedule. For this purpose, one approach which stands out in particular in literature is personalized scheduling. That is, a different schedule for every patient and/or scenario. For e.g. Cost optimized personalized schedules based on Markov models have been proposed by \citet{bebu2017OptimalScreening}. Cost optimized personalized equi-spaced screening intervals, using Microsimulation Screening Analysis (MISCAN) models have been proposed by \citet{oMahonyOptimaInterval}. \citet{parmigiani1998designing} have used information theory to come up with schedules for detecting time to event in the smallest possible time interval. Most of these methods however create an entire schedule in advance. In contrast \citet{drizopoulosPersScreening} have proposed dynamic personalized schedules for longitudinal biomarkers using the framework of joint models for time to event and longitudinal data \citep{tsiatis2004joint,rizopoulos2012joint}.
 
-The schedules we propose in this paper are tailored separately for every patient, and are dynamic. That is, biopsies are scheduled at different time points per patient utilizing his available PSA measurements and previous biopsy results up to that point in time. We achieve this using joint models. Based on these models we obtain a full specification of the joint distribution of the PSA levels and time of GR. We further use it to define a patient-specific posterior predictive distribution of the time of GR given the observed PSA measurements and previous biopsies. Using the general framework of Bayesian decision theory, we propose a set of loss functions which are minimized to find the optimal time of performing a biopsy. These loss functions yield us two categories of personalized schedules, those based on expected time of GR and those based on the risk of GR. We also analyze an approach where the two types of schedules are combined. To compare the proposed personalized schedules with the PRIAS and annual schedule we conduct a simulation study, and then discuss various metrics for evaluating efficacy of each schedule, and choosing the most suitable one. It is important to note that a schedule for measurement of DRE is not of interest since it is a non invasive procedure and has no serious medical implications. Thus the only event of interest is GR and not DRE crossing the threshold of cT2c.
+The schedules we propose in this paper are tailored separately for every patient, and are dynamic. That is, biopsies are scheduled at different time points per patient utilizing his available PSA measurements and previous biopsy results up to that point in time. We achieve this using joint models. Based on these models we obtain a full specification of the joint distribution of the PSA levels and time of GR. We further use it to define a patient-specific posterior predictive distribution of the time of GR given the observed PSA measurements and previous biopsies. Using the general framework of Bayesian decision theory, we propose a set of loss functions which are minimized to find the optimal time of performing a biopsy. These loss functions yield us two categories of personalized schedules, those based on expected time of GR and those based on the risk of GR. We also analyze an approach where the two types of schedules are combined. To compare the proposed personalized schedules with the PRIAS and annual schedule we conduct a simulation study, and then discuss various metrics for evaluating the efficacy of each schedule, and a method to choose the most suitable one.
 
-As mentioned earlier, to achieve personalization the proposed schedules utilize information from PSA measurements. This is important because PSA measurements are easy to obtain, and thus they are consequently cost effective. PSA measurement process does not lead to any side effects and thus compliance rate for measurement of PSA levels is high( 91\% in PRIAS). Most importantly, it was found in PRIAS that PSA-DT was indicative of GR \citep{bokhorst2015compliance}. The information from PSA was however not fully utilized. More specifically, when PSA was observed to be stable, patients/doctors in PRIAS not always complied with the biopsy schedule. In this regard, the usage of joint models allows more sophisticated modeling of PSA levels and information from repeat biopsies than PRIAS, and thus offers a more informative decision making process.
+The role of PSA measurements in personalized schedules is important, because PSA measurements are easy to obtain, and consequently they are cost effective. The PSA measurement process does not lead to any side effects and thus compliance rate for measurement of PSA levels is high (91\% in PRIAS). Most importantly, it was found in PRIAS that PSA-DT was indicative of GR \citep{bokhorst2015compliance}. The information from PSA was however not fully utilized. More specifically, when PSA was observed to be stable, patients/doctors in PRIAS not always complied with the biopsy schedule. In this regard, the usage of joint models allows more sophisticated modeling of PSA levels and information from repeat biopsies than PRIAS, and thus offers a more informative decision making process.
 
-The rest of the paper is organized as follows. Section \ref{sec : jm_framework} covers briefly the joint modeling framework. Section \ref{sec : pers_sched_approaches} details the personalized scheduling approaches we have proposed in this paper. In section \ref{sec : choosing_schedule} we discuss criteria for evaluation of the efficacy of a schedule and the choice of the most optimal schedule. In Section \ref{sec : pers_schedule_PRIAS} we demonstrate the functioning of personalized schedules by employing them for the patients from the PRIAS program. Lastly, in Section \ref{sec: simulation_study}, we present the results from a simulation study we conducted, to compare personalized schedules with PRIAS schedule and annual schedule.
+The rest of the paper is organized as follows. Section \ref{sec : jm_framework} covers briefly the joint modeling framework. Section \ref{sec : pers_sched_approaches} details the personalized scheduling approaches we have proposed in this paper. In section \ref{sec : choosing_schedule} we discuss criteria for evaluation of the efficacy of a schedule and the choice of the most optimal schedule. In Section \ref{sec : pers_schedule_PRIAS} we demonstrate the functioning of personalized schedules by employing them for the patients from the PRIAS program. Lastly, in Section \ref{sec: simulation_study}, we present the results from a simulation study we conducted to compare personalized schedules with PRIAS and annual schedule.
