--- a/report/pers_schedule/biometrics_submission/pers_schedules.tex
+++ b/report/pers_schedule/biometrics_submission/pers_schedules.tex
@@ -167,8 +167,8 @@ Department of Statistics, University of Latex, Coventry CV4 7AL, U.K}
 %  sample dates (these will have no effect on the fate of your paper in the
 %  review process!)
 
-\date{{\it Received October} 2007. {\it Revised February} 2008.  {\it
-Accepted March} 2008.}
+\date{{\it Received October} 0000. {\it Revised February} 0000.  {\it
+Accepted March} 0000.}
 
 %  These options will count the number of pages and provide volume
 %  and date information in the upper left hand corner of the top of the 
@@ -181,8 +181,8 @@ Accepted March} 2008.}
 %  has no bearing on what actually happens to your paper!  
 
 \pagerange{\pageref{firstpage}--\pageref{lastpage}} 
-\volume{64}
-\pubyear{2008}
+\volume{00}
+\pubyear{0000}
 \artmonth{December}
 
 %  The \doi command is where the DOI for your paper would be placed should it
@@ -266,7 +266,7 @@ Personalized medicine; Prostate cancer; Active surveillance; Joint models.
 
 \section*{Supplementary Materials}
 
-Web Appendix A, referenced in Section~\ref{s:model}, is available with
+Web Appendix A, referenced in Section~\ref{sec : jm_framework}, is available with
 this paper at the Biometrics website on Wiley Online
 Library.\vspace*{-8pt}
 
