--- a/report/pers_schedule/biometrics_submission/mainmatter/abstract.tex
+++ b/report/pers_schedule/biometrics_submission/mainmatter/abstract.tex
@@ -1,5 +1,5 @@
-% !TEX root =  ../main.tex 
+% !TEX root =  ../pers_schedules.tex 
 
 \begin{abstract}
-Low risk prostate cancer patients are often encouraged to join active surveillance (AS) programs rather than taking immediate treatment. In most AS programs repeat biopsies are conducted annually or as per a common fixed schedule for these patients. When the Gleason score based on biopsies is found to be upgraded, the patients are given curative treatment. It has been found that such fixed and frequent schedules for biopsies discourage patients to receive repeat biopsies, and also bring a financial burden. Motivated by the world's largest AS program PRIAS, in this work we present personalized schedules for biopsies to counter these problems. Our methods create separate schedules for every person, on the basis of the evolution of his prostate-specific antigen (PSA) levels as well as results from previous repeat biopsies. We discuss criteria for evaluation of biopsy schedules, and then use them to compare the efficacy of personalized schedules with that of existing biopsy schedules.
+Low risk prostate cancer patients enrolled in active surveillance (AS) programs have to undergo biopsies on a frequent basis for examination of disease progression. Majority of the AS programs worldwide employ fixed schedules of biopsies for all patients. It has been found that such fixed and frequent schedules discourage to receive biopsies, and also bring a financial burden on the healthcare systems. Motivated by the world's largest AS program PRIAS, in this paper we present personalized schedules for biopsies to counter these problems. Using joint models for time to event and longitudinal data, our methods combine information from previous biopsy results and historical prostate-specific antigen (PSA) levels of a patient, to schedule the next biopsy. Lastly, we present criteria to compare the efficacy of personalized schedules with that of existing biopsy schedules, and a method to select the optimal schedule.
 \end{abstract}
