--- a/report/pers_schedule/biometrics_submission/mainmatter/joint_model_framework.tex
+++ b/report/pers_schedule/biometrics_submission/mainmatter/joint_model_framework.tex
@@ -1,12 +1,7 @@
-% !TEX root =  ../main.tex 
-
+% !TEX root =  ../pers_schedules.tex 
 \section{Joint model for time to event and longitudinal outcomes}
 \label{sec : jm_framework}
-We start with the definition of the joint modeling framework that will be used to fit a model to the available dataset, and then to plan biopsies for future patients.
-
-\subsection{Joint model specification}
-\label{subsec : jm_specification}
-Let $T_i^*$ denote the true GR time for the $i$-th patient enrolled in an AS program. Let the vector of times at which biopsies are conducted for this patient be denoted by $T_i^b = \{T^b_{i0}, T^b_{i1}, \ldots, T^b_{i{N_i^b}}; T^b_{ij} < T^b_{ik}, \forall j<k\}$, where $N_i^b$ are the total number of biopsies conducted. Because of the periodical nature of biopsy schedules $T_i^*$ cannot be observed directly and it is only known that it falls in an interval $(l_i, r_i]$, where $l_i = T^b_{i{N_i^b - 1}}, r_i = T^b_{i{N_i^b}}$ if the GR is observed, and $l_i = T^b_{i{N_i^b}}, r_i=\infty$ if patient drops out of AS before GR is observed. Further let $\bmath{y}_i$ denote the $n_i \times 1$  vector of PSA levels for the $i$-th patient. For a sample of $n$ patients the observed data is denoted by $\mathcal{D}_n = \{l_i, r_i, \bmath{y}_i; i = 1, \ldots, n\}$.
+We start with the definition of the joint modeling framework that will be used to fit a model to the available dataset, and then to plan biopsies for future patients. Let $T_i^*$ denote the true GR time for the $i$-th patient enrolled in an AS program. Let the vector of times at which biopsies are conducted for this patient be denoted by $T_i^b = \{T^b_{i0}, T^b_{i1}, \ldots, T^b_{i{N_i^b}}; T^b_{ij} < T^b_{ik}, \forall j<k\}$, where $N_i^b$ are the total number of biopsies conducted. Because of the periodical nature of biopsy schedules $T_i^*$ cannot be observed directly and it is only known that it falls in an interval $(l_i, r_i]$, where $l_i = T^b_{i{N_i^b - 1}}, r_i = T^b_{i{N_i^b}}$ if the GR is observed, and $l_i = T^b_{i{N_i^b}}, r_i=\infty$ if patient drops out of AS before GR is observed. Further let $\bmath{y}_i$ denote the $n_i \times 1$  vector of PSA levels for the $i$-th patient. For a sample of $n$ patients the observed data is denoted by $\mathcal{D}_n = \{l_i, r_i, \bmath{y}_i; i = 1, \ldots, n\}$.
 
 The longitudinal outcome of interest, namely PSA level is continuous in nature and thus to model it the joint model utilizes a linear mixed effects model (LMM) of the form:
 \begin{equation*}
@@ -19,10 +14,10 @@ where $\bmath{x}_i(t)$ denotes the row vector of design matrix for fixed effects
 
 To model the effect of longitudinal outcome on hazard of GR, joint models utilize a relative risk sub-model. The hazard of GR for patient $i$ at any time point $t$, denoted by $h_i(t)$, depends on a function of subject specific linear predictor $m_i(t)$ and/or the random effects:
 \begin{align*}
-h_i(t \mid \mathcal{M}_i(t), \bmath{w}_i) &= \lim_{\Delta t \to 0} Pr\big\{t \leq T^*_i < t + \Delta t \mid T^*_i \geq t, \mathcal{M}_i(t), \bmath{w}_i\big\}/\Delta t\\
+h_i(t \mid \mathcal{M}_i(t), \bmath{w}_i) &= \lim_{\Delta t \to 0} \frac{\mbox{Pr}\big\{T^*_i \epsilon [t, t + \Delta t) \mid T^*_i \geq t, \mathcal{M}_i(t), \bmath{w}_i\big\}}{\Delta t}\\
 &=h_0(t) \exp\big[\bmath{\gamma}^T\bmath{w}_i + f\{M_i(t), \bmath{b}_i, \bmath{\alpha}\}\big]
 \end{align*}
-where $\mathcal{M}_i(t) = \{m_i(v), 0\leq v \leq t\}$ denotes the history of the underlying longitudinal process up to time $t$. $\bmath{w}_i$ is a vector of baseline covariates and $\bmath{\gamma}$ are the corresponding parameters. The function $f(\cdot)$ parametrized by vector $\bmath{\alpha}$ specifies the functional form \citep{brown2009assessing,rizopoulos2012joint,taylor2013real,rizopoulos2014bma,rizopoulosJMbayes} of longitudinal outcome that is used in the linear predictor of the relative risk model. Some functional forms relevant to the problem at hand, and their interpretation are the following: 
+where $\mathcal{M}_i(t) = \{m_i(v), 0\leq v \leq t\}$ denotes the history of the underlying longitudinal process up to time $t$. $\bmath{w}_i$ is a vector of baseline covariates and $\bmath{\gamma}$ are the corresponding parameters. The function $f(\cdot)$ parametrized by vector $\bmath{\alpha}$ specifies the functional form of longitudinal outcome \citep{brown2009assessing,rizopoulos2012joint,taylor2013real,rizopoulos2014bma,rizopoulosJMbayes} that is used in the linear predictor of the relative risk model. Some functional forms relevant to the problem at hand and their interpretation are the following: 
 \begin{eqnarray*}
 \left \{
 \begin{array}{l}
@@ -35,31 +30,6 @@ These formulations of $f(\cdot)$ postulate that the hazard of GR at time $t$ may
 \begin{equation*}
 \log{h_0(t)} = \gamma_{h_0,0} + \sum_{q=1}^Q \gamma_{h_0,q} B_q(t, \bmath{v})
 \end{equation*}
-where $B_q(t, \bmath{v})$ denotes the $q$-th basis function of a B-spline with knots $\bmath{v} = v_1, \ldots, v_Q$ and vector of spline coefficients $\gamma_{h_0}$. To avoid choosing the number and position of knots in the spline, a relatively high number of knots (e.g., 15 to 20) are chosen and the corresponding B-spline regression coefficients $\gamma_{h_0}$ are penalized using a differences penalty \citep{eilers1996flexible}.
+where $B_q(t, \bmath{v})$ denotes the $q$-th basis function of a B-spline with knots $\bmath{v} = v_1, \ldots, v_Q$ and vector of spline coefficients $\gamma_{h_0}$. To avoid choosing the number and position of knots in the spline, a relatively high number of knots (e.g., 15 to 20) are chosen and the corresponding B-spline regression coefficients $\gamma_{h_0}$ are penalized using a differences penalty \citep{eilers1996flexible}. 
 
-\subsection{Parameter estimation}
-\label{subsec : jm_param_estimation_bayesian}
-We estimate parameters of the joint model using Markov chain Monte Carlo (MCMC) methods under the Bayesian framework. Let $\bmath{\theta}$ denote the vector of the parameters of the joint model. The joint model postulates that given the random effects, time to GR and longitudinal responses taken over time are all mutually independent. Under this assumption the posterior distribution of the parameters is given by:
-\begin{align*}
-p(\bmath{\theta}, \bmath{b} \mid \mathcal{D}_n) & \propto \prod_{i=1}^n p(l_i, r_i, \bmath{y}_i \mid \bmath{b}_i, \bmath{\theta}) p(\bmath{b}_i \mid \bmath{\theta}) p(\bmath{\theta})\\
-& \propto \prod_{i=1}^n p(l_i, r_i \mid \bmath{b}_i, \bmath{\theta}) p(\bmath{y_i} \mid \bmath{b}_i, \bmath{\theta}) p(\bmath{b}_i \mid \bmath{\theta}) p(\bmath{\theta})
-\end{align*}
-where the likelihood contribution of longitudinal outcome conditional on random effects is:
-\begin{align*}
-p(\bmath{y_i} \mid \bmath{b}_i, \bmath{\theta}) &= \frac{1}{\big(\sqrt{2 \pi \sigma^2}\big)^{n_i}} \exp\bigg\{-\frac{{\lVert{\bmath{y_i} - \bmath{X}_i\bmath{\beta} - \bmath{Z}_i\bmath{b}_i}\rVert}^2}{\sigma^2}\bigg\},\\
-\bmath{X}_i &= \{\bmath{x}_i(t_{i1})^T, \ldots, \bmath{x}_i(t_{in_i})^T\}^T,\\
-\bmath{Z}_i &= \{\bmath{z}_i(t_{i1})^T, \ldots, \bmath{z}_i(t_{in_i})^T\}^T
-%p(\bmath{b}_i \mid \bmath{\theta}) = \frac{1}{\sqrt{(2 \pi)^q \text{det}(\bmath{D})}} \exp\{\bmath{b}_i^T \bmath{D}^{-1} \bmath{b}_i\} 
-\end{align*}
-The likelihood contribution of the time to GR outcome is given by:
-\begin{equation}
-\label{eq : likelihood_contribution_survival}
-p\{l_i,r_i\mid \bmath{b}_i,\bmath{\theta}\} = \exp\Big\{-\int_0^{l_i} h_i(s \mid \mathcal{M}_i(s), \bmath{w}_i)\rmn{d}{s}\Big\} - \exp\Big\{-\int_0^{r_i}h_i(s \mid \mathcal{M}_i(s), \bmath{w}_i)\rmn{d}{s}\Big\}
-\end{equation}
-The integral in (\ref{eq : likelihood_contribution_survival}) does not have a closed-form solution, and therefore we use a 15-point Gauss–Kronrod quadrature rule to approximate it.
-
-We use independent normal priors with zero mean and variance 100 for the fixed effects $\bmath{\beta}$ and inverse Gamma priors for $\sigma^2$. For the variance–covariance matrix $\bmath{D}$ of the random effects we take inverse Wishart prior with an identity scale matrix and degrees of freedom equal to the number $q$ of the random effects. For the relative risk model's parameters $\bmath{\gamma}$ and the association parameters $\bmath{\alpha}$, we use independent normal priors with zero mean and variance 100. For the penalized version of the B-spline approximation to the baseline hazard, we use the following prior for parameters $\gamma_{h_0}$ \citep{lang2004bayesian}:
-\begin{equation*}
-p(\gamma_{h_0} \mid \tau_h) \propto \tau_h^{\rho(\bmath{K})/2} \exp\bigg\{-\frac{\tau_h}{2}\gamma_{h_0}^T \bmath{K} \gamma_{h_0}\bigg\}
-\end{equation*}
-where $\tau_h$ is the smoothing parameter that takes a Gamma(1, 0.005) hyper-prior in order to ensure a proper posterior for $\gamma_{h_0}$, $\bmath{K} = \Delta_r^T \Delta_r + 10^{-6} \bmath{I}$, where $\Delta_r$ denotes the $r$-th difference penalty matrix, and $\rho(\bmath{K})$ denotes the rank of $\bmath{K}$.
+For the estimation of joint model's parameters we use a Bayesian approach. The details of the estimation method, including posterior distribution of the parameters $p(\bmath{\theta} \mid \mathcal{D}_n)$, where $\bmath{\theta}$ denotes the vector of all parameters, are presented in Section 1 of the supplementary material.
