--- a/report/pers_schedule/biometrics_submission/mainmatter/pers_sched_framework/algorithm.tex
+++ b/report/pers_schedule/biometrics_submission/mainmatter/pers_sched_framework/algorithm.tex
@@ -1,5 +1,4 @@
-\resizebox{0.65\columnwidth}{!}{%
-
+\resizebox{0.65\columnwidth}{!}{
 \begin{tikzpicture}
 \node (start) [startstop] {
 Enter Active Surveillance.
@@ -74,6 +73,5 @@ Enter Active Surveillance.
 \draw [arrow] (decision3) -- node[anchor=south]{No} (pro7);
 \draw [arrow] (pro7.west)|- ([xshift=-0.35cm, yshift=-7.8cm]pro5.north west) |- (propTime);
 \end{tikzpicture}
-
-}%
+}
 
